--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
   background: transparent;
   color: #d1d5db;
   height: 100%;
-  overflow: hidden;
   scroll-behavior: smooth;
 }
 #Container {
@@ -241,18 +240,18 @@ m {
 @media (max-width: 768px) {
   #Container {
     flex-direction: column;
+    align-items: center;
+    margin-top: 5vh;
     height: auto;
-    overflow: visible;
+    gap: 4vh;
+    padding: 0 2vw;
   }
 
-    #LeftPanel {
-    width: 100%;
-    order: 1; /* comes *after* RightPanel */
-  }
-
+  #LeftPanel,
   #RightPanel {
     width: 100%;
-    order: 2; /* comes *first* */
+    height: auto;
+    max-height: none;
   }
 
   h1 {
